--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,8 @@
 {
   "translate": "Русский",
-  "page-not-found": "Page not found"
+  "page-not-found": "Page not found",
+  "menu": "Menu",
+  "increment": "Increment",
+  "main": "Main",
+  "about": "About us"
 }
